--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,17 @@ body {
   text-align: center;
 }
 
-.board h1 {
+header h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #eee;
   margin-bottom: 16px;
+  margin-top: 16px;
+}
+header img {
+  display: block;
+  margin: auto;
 }
 
 .board button {
@@ -47,7 +55,7 @@ body {
   background: transparent;
   border: 2px solid #eee;
   color: #eee;
-  width: 100px;
+  width: 150px;
   border-radius: 5px;
   transition: 0.2s;
   font-weight: bold;
@@ -80,6 +88,9 @@ body {
   height: 70px;
   pointer-events: none;
   border-color: transparent;
+}
+.titleTurn {
+  margin-top: 25px;
 }
 
 .square.is-selected {
